# actix-3

./: Cargo.toml
migrations/2021-01-07-191920_users/: up.sql
migrations/2021-01-07-191929_invitations/: up.sql
src/: main.rs  schema.rs
src/handlers/: auth_handler.rs  invitation_handler.rs  register_handler.rs
src/models/: invitation.rs  mod.rs  slim_user.rs  user.rs
src/services/: email_service.rs
src/utils/: errors.rs  hash.rs
