[package]
name = "auth-server"
version = "0.1.0"
authors = ["predrag-stosic <predrag.stosic@immosparrow.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-identity = "0.3"
actix-rt = "1.1"
actix-web = "3.3"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "1.4", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15"
env_logger = "0.8"
futures = "0.3.6"
lazy_static = "1.4"
r2d2 = "0.8"
rust-argon2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sparkpost = "0.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
jsonwebtoken = "7.2"